# command_center

./: .gitignore  Cargo.toml  metadata.json
ai_chatbot_demo/: Cargo.toml
ai_chatbot_demo/src/: lib.rs
command_center/: Cargo.toml  README.md  package-lock.json
command_center/ai_chatbot_demo/: Cargo.toml
command_center/command_center/: Cargo.toml
command_center/command_center/src/: icon  lib.rs  structs.rs  tg_api.rs
command_center/pkg/: ai_chatbot_demo.wasm  command_center.wasm  manifest.json  scripts.json  tg.wasm  worker.wasm
command_center/pkg/ui/: index.html  package-lock.json  package.json  vite.config.ts
command_center/pkg/ui-old/: package.json
command_center/pkg/ui/assets/: index-7KYnY1Sy.js  index-CSjqOKJs.js  index-pc3WTSJk.css
command_center/src/: chatbot.rs  files.rs  icon  lib.rs  old_lib.rs  spawners.rs  structs.rs  temp.rs  test.rs  tg_api.rs
command_center/ui/: index.html  package-lock.json  package.json  vite.config.ts
command_center/ui/src/: App.css  App.jsx  submitKey.jsx  tooltip.jsx
command_center/ui/src/components/: FileView.jsx  Home.jsx  Popup.jsx  TreeNode.jsx
command_center/worker/: Cargo.toml
command_center/worker/src/: lib.rs
files_lib/: Cargo.toml
files_lib/src/: encryption.rs  lib.rs  structs.rs
pkg/: command_center.wasm  manifest.json  openai.wasm  scripts.json  speech_to_text.wasm  tg.wasm
pkg/ui/: index.css  index.html  main.js  package-lock.json  package.json  submitKey.js
send/src/: lib.rs
storage/: Cargo.toml
storage/src/: lib.rs  structs.rs
storage_interface/: Cargo.toml
storage_interface/src/: lib.rs
vectorbase/: Cargo.toml
vectorbase/src/: lib.rs  prompts.rs  rag.rs  similarity_search.rs  structs.rs
vectorbase_demo/: Cargo.toml
vectorbase_demo/src/: lib.rs  structs.rs  vectorbase.rs
vectorbase_demo/src/rag/: mod.rs  prompts.rs  structs.rs
vectorbase_demo/src/vectorbase/: mod.rs  structs.rs
vectorbase_interface/: Cargo.toml
vectorbase_interface/src/: lib.rs
worker/: Cargo.toml
