[package]
name = "ai_chatbot_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", rev = "84b3d84" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.24.0"
llm_interface = { git = "https://github.com/kinode-dao/llm", branch = "interface"}
stt_interface = { git = "https://github.com/kinode-dao/stt", branch = "interface"}
telegram_interface = { git = "https://github.com/kinode-dao/telegram-bot/", branch = "zen/interface" }
# TODO: We probably shouldn't have frankenstein here, the telegram_interface (or the wit) should contain all the traits required.
frankenstein = { version = "0.30", default-features = false, features = ["telegram-trait"] } 

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
