[package]
name = "command_center"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
frankenstein = { version = "0.30", default-features = false, features = ["telegram-trait"] }
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", rev = "84b3d84" }
llm_interface = { git = "https://github.com/kinode-dao/llm", branch = "builder"}
stt_interface = { git = "https://github.com/kinode-dao/stt", branch = "main"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.0"
openai_whisper = { git = "https://github.com/kinode-dao/openai_whisper"}

wit-bindgen = "0.24.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
