[package]
name = "files_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-crypto-wasm = "0.3.1"
chrono = { version = "0.4.38", features = ["serde"] }
rand = "0.8.5"
anyhow = "1.0"
bincode = "1.3.3"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", tag = "v0.8.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.24.0"

[package.metadata.component]
package = "kinode:process"
