[package]
name = "vectorbase_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", tag = "v0.8.0" }
vectorbase_interface = { git = "https://github.com/kinode-dao/command_center", branch = "vectorbase_interface" }
llm_interface = { git = "https://github.com/kinode-dao/llm", branch = "interface"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.24.0"
url = "2.2.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
