[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
files_lib = {path = "../../files_lib"}
base64 = "0.22.1"
anyhow = "1.0"
bincode = "1.3.3"
frankenstein = { version = "0.30", default-features = false, features = ["telegram-trait"] }
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", tag = "v0.8.1" }
llm_interface = { git = "https://github.com/kinode-dao/llm", branch = "interface"}
stt_interface = { git = "https://github.com/kinode-dao/stt", branch = "interface"}
telegram_interface = { git = "https://github.com/kinode-dao/telegram-bot/", branch = "zen/interface" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.0"

wit-bindgen = "0.24.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
